tests/NormalTests/paczka1/small_fuzzy/96026932.err
Error in line 3: XArlTZRR1p A152 93,0
Error in line 4: XArlTZRR1p S517 77,6
